# sonority_rsa

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
docs/: INTERPRETING_PARTIAL_AND_MR_RSA.md  PLAN_partial_rsa.md
examples/: toy_analysis.py  toy_frames.csv
sonority_rsa/: __init__.py  analysis.py  bootstrap.py  cli.py  data.py  extract.py  fetch.py  intensity.py  partial.py  plot.py  rdm.py  sampling.py  stats_util.py  util_stats.py
src/sonority_rsa/: bootstrap.py  data.py
tests/: conftest.py  test_analysis.py  test_bootstrap.py  test_data.py  test_extract.py  test_fetch.py  test_intensity.py  test_partial.py  test_plot.py  test_rdm.py  test_sampling.py  test_stats_util.py  test_util_stats.py
