[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonority-rsa"
version = "0.1.8"
description = "Bootstrap RSA for wav2vec phone middle frames and sonority"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "tqdm",
  "phraser @ git+https://github.com/martijnbentum/phraser.git",
  "echoframe @ git+https://github.com/martijnbentum/echoframe.git",
  "dutch-syllabifier @ git+https://github.com/martijnbentum/dutch-syllabifier.git",
]

[project.urls]
Homepage = "https://github.com/martijnbentum/sonority_rsa"
Repository = "https://github.com/martijnbentum/sonority_rsa"

[tool.setuptools]
packages = ["sonority_rsa"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
